terraform-up-and-running-code-examples/ec2-instance-example/webserver-cluster/main.tf
# defines the cloud provider
provider "aws" {
    region = "us-east-1"
}

# ASG configs
resource "aws_launch_template" "example" {
    name_prefix = "webserver-template-"
    image_id    = "ami-020cba7c55df1f615"
    instance_type = "t2.micro"

    network_interfaces {
        associate_public_ip_address = true
        security_groups = [aws_security_group.instance.id]
    }
    

    user_data = base64encode(<<-EOF
            #!/bin/bash
            echo "Hello, World" > index.html
            nohup busybox httpd -f -p ${var.server_port} &
            EOF
    )

    tags = {
        Name = "webserver_launch_template"
    }
    #this is required for using a launch config with an AGS
    lifecycle {
        create_before_destroy = true
    }
}

#defines ASG
resource "aws_autoscaling_group" "example" {
    launch_template {
      id = aws_launch_template.example.id
      version = "$Latest"
    }

    vpc_zone_identifier = data.aws_subnets.default.ids

    target_group_arns = [aws_lb_target_group.asg.arn]
    health_check_type = "ELB"

    min_size = 2
    max_size = 10

    tag {
        key = "Name"
        value   = "terraform-asg-example"
        propagate_at_launch = true
    }
}

# creates security group
resource "aws_security_group" "instance" {
    name = "terraform-example-instance-sg"

    ingress {
        from_port = var.server_port
        to_port = var.server_port
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
}

# look up data for default VPC
data "aws_vpc" "default" {
    default = true
}

# look up subnet within VPC
data "aws_subnets" "default" {
    filter {
        name = "vpc-id"
        values = [data.aws_vpc.default.id]
    }
   
}

#creates Application load balancer
resource "aws_lb" "example" {
    name    = "terraform-asg-example"
    load_balancer_type = "application"
    subnets = data.aws_subnets.default.ids
    security_groups = [aws_security_group.alb.id]
}

#configure the ALB listener
resource "aws_lb_listener" "http" {
    load_balancer_arn = aws_lb.example.arn
    port = 80
    protocol = "HTTP"
    
    #by default, return 404 page
    default_action {
        type = "fixed-response"

        fixed_response {
            content_type = "text/plain"
            message_body = "404: page not found"
            status_code = 404
        }
    }
}

#security group for ALB
resource "aws_security_group" "alb" {
    name = "terraform-example-alb"

    #allow inbound HTTP requests
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    #allow all outbound requests
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}

#create target group for ASG
resource "aws_lb_target_group" "asg" {
    name = "terraform-asg-example"
    port = var.server_port
    protocol = "HTTP"
    vpc_id = data.aws_vpc.default.id
    
    #health check to each Instance
    health_check {
        path    = "/"
        protocol = "HTTP"
        matcher = "200"
        interval = 15
        timeout = 3
        healthy_threshold = 2
        unhealthy_threshold = 2
    }
}

#create LB listener rules that sends requests that match any path to the target group containing the ASG
resource "aws_lb_listener_rule" "asg" {
    listener_arn = aws_lb_listener.http.arn
    priority = 100

    condition {
      path_pattern {
        values = ["*"]
      }
    }

    action {
        type = "forward"
        target_group_arn = aws_lb_target_group.asg.arn
    }
}
